--- a/config/simapp.yaml
+++ b/config/simapp.yaml
@@ -12,12 +12,14 @@ configuration:
       ReportCaller: false
       debugLevel: info
   subscribers:
-  - ueId: 123456789123456
+  - ueId-start: 123456789123458
+    ueId-end: 123456789123458
     plmnId: 20893
     opc: 8e27b6af0e692e750f32667a3b14605d
     key: 8baf473f2f8fd09487cccbd7097c6862
     sequenceNumber: 16f3b3f70fc2
-  - ueId: 123456789123457
+  - ueId-start: 123456789123460
+    ueId-end: 123456789123465
     plmnId: 20893
     opc: 8e27b6af0e692e750f32667a3b14605d
     key: 8baf473f2f8fd09487cccbd7097c6862
