--- a/config/simapp.yaml
+++ b/config/simapp.yaml
@@ -24,7 +24,7 @@ configuration:
     opc: 22222222222222222222222222222222
     key: 22222222222222222222222222222222
     sequenceNumber: 222222222
-  sub_provision_endpt:
+  sub-provision-endpt:
     addr: webui
     port: 5000
   device-groups:
