--- a/config/simapp.yaml
+++ b/config/simapp.yaml
@@ -39,11 +39,12 @@ configuration:
     ip-domain-expanded:
       dnn: internet
       dns-primary: 8.8.8.8
+      dns-secondary: 8.8.4.4
       mtu: 1460
       ue-ip-pool: 10.91.0.0/16
-      dnn-qos:
-        downlink-mbr: 20000000
-        uplink-mbr: 4000000
+      ue-dnn-qos:
+        dnn-mbr-downlink: 20000000
+        dnn-mbr-uplink: 4000000
         traffic-class: "platinum"  #default bearer QCI/ARP 
     site-info: "menlo"
   network-slices:
