--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,15 @@
 # SPDX-License-Identifier: Apache-2.0
 # Copyright 2024 Intel Corporation
 
-name: Master workflow
+name: Main workflow
 
 on:
   pull_request:
     branches:
-      - master
+      - main
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -48,7 +48,7 @@ jobs:
       - name: FOSSA scan
         uses: fossa-contrib/fossa-action@v3
         with:
-          fossa-api-key: 9dc8fa92e3dd565687317beb87b56d89
+          fossa-api-key: 0c3bbcdf20e157bbd487dae173751b28
 
   unit-tests:
     runs-on: ubuntu-latest
