--- a/.golangci.yml
+++ b/.golangci.yml
@@ -235,7 +235,7 @@ linters:
     # - errcheck
     - staticcheck
     - unused
-    # - gosimple
+    - gosimple
     - ineffassign
     - typecheck
     # Additional
