--- a/.golangci.yml
+++ b/.golangci.yml
@@ -232,7 +232,7 @@ linters:
   enable:
     - gofmt
     # - govet
-    # - errcheck
+    - errcheck
     - staticcheck
     - unused
     - gosimple
@@ -253,7 +253,7 @@ linters:
     - whitespace
     - unconvert
     - predeclared
-    # - noctx
+    - noctx
     - dogsled
     # - bodyclose
     - asciicheck
